name:                smtp
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Nikolay Amiantov
maintainer:          ab@fmap.me
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.SMTP.Address
                       Network.SMTP.Protocol
                       Network.SMTP.Server
                       Text.Domain.Parser
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , text
                     , vector
                     , transformers
                     , conduit
                     , network
                     , conduit-extra
                     , attoparsec
                     , netwire
  default-extensions:  ViewPatterns
                     , PatternSynonyms
                     , OverloadedStrings
                     , LambdaCase
                     , Arrows
                     , RecordWildCards
                     , TupleSections
                     , TemplateHaskell
                     , RankNTypes
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
